# bevy_resolution

./: CHANGELOG.md  Cargo.toml  README.md
examples/: basic.rs  changes.rs  scaling.rs  windows.rs
src/: common.rs  lib.rs  prelude.rs  resolutions.rs
