[package]
name = "bevy_resolution"
version = "0.1.0-rc.2"
edition = "2021"
categories = ["game-development"]
description = "An easy to use convienence crate for dealing with resolutions in Bevy"
keywords = ["bevy", "resolution", "gamedev", "game"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sapein/bevy_resolution"
readme = "README.md"


[dependencies]
bevy_math = "0.15.0-rc.3"
bevy_window = { version = "0.15.0-rc.3", optional = true }

[features]
default = ["bevy_window"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "scaling"
path = "examples/scaling.rs"

[[example]]
name = "window"
path = "examples/windows.rs"
required-features = ["bevy_window"]
